# agimus_libfranka

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  package.xml
.github/workflows/: ci_ros2.yml  nix.yml  update-flake-lock.yml
cmake/: FindPoco.cmake  agimus_libfrankaConfig.cmake.in
doc/: CMakeLists.txt
examples/: CMakeLists.txt  generate_cartesian_pose_motion_external_control_loop.cpp  generate_cartesian_velocity_motion_external_control_loop.cpp  generate_joint_position_motion_external_control_loop.cpp  generate_joint_velocity_motion_external_control_loop.cpp  motion_with_control_external_control_loop.cpp
include/franka/: active_motion_generator.h  robot.h
scripts/: format-check.sh
src/: active_control.cpp  active_motion_generator.cpp  active_torque_control.cpp  control_loop.cpp  control_loop.h  errors.cpp  gripper.cpp  library_downloader.cpp  logger.cpp  logger.h  model.cpp  motion_generator_traits.h  robot.cpp  robot_control.h  robot_impl.cpp  robot_impl.h  vacuum_gripper.cpp
test/: CMakeLists.txt  active_motion_generator_tests.cpp  active_torque_control_tests.cpp  control_loop_tests.cpp  errors_tests.cpp  gripper_command_tests.cpp  gripper_tests.cpp  helpers.cpp  helpers.h  logger_tests.cpp  mock_robot_control.h  mock_robot_impl.h  mock_server.cpp  mock_server.h  model_tests.cpp  robot_command_tests.cpp  robot_impl_tests.cpp  robot_state_tests.cpp  robot_tests.cpp  vacuum_gripper_command_tests.cpp  vacuum_gripper_tests.cpp
