<package format="3">
  <name>agimus_libfranka</name>
  <version>0.9.3</version>
  <description>fork of libagimus_franka for agimus_franka robots not maintained anymore by agimus_franka</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>Apache-2.0</license>

  <author>Franka Robotics GmbH</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>libpoco-dev</build_depend>
  <build_export_depend>agimus_libfranka_common</build_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>libpoco-dev</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>gtest</test_depend>
  <test_depend>libgmock-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
